updated keys in bundles to match english version

--- a/src/i18n/ScarabBundle_de_DE.properties
+++ b/src/i18n/ScarabBundle_de_DE.properties
@@ -24,6 +24,7 @@ TemplateList.vm.Title = Vorlagen-Liste
 UserList.vm.Title = Benutzer auswählen
 ViewIssue.vm.Title = Ticket ansehen
 ViewIssueLong.vm.Title = Tickets ansehen
+IssueTypeList.vm.Title = Build list of issue types
 
 admin/AddPermission.vm.Title = Rechte-Verwaltung
 admin/AddRole.vm.Title = Rollen-Verwaltung
@@ -71,8 +72,6 @@ entry/Wizard2.vm.Title = Duplikat entdeckt
 entry/Wizard3.vm.Title = Ticket erfassen
 
 home/EnterNew.vm.Title = Neu erfassen...
-home/ModuleQuery.vm.Title = Modul-Abfragen
-home/XModuleList.vm.Title = Modulübergreifende Abfrage
 
 help/Introduction.vm.Title = Scarab-Übersicht
 help/Navigation.vm.Title = Scarab steuern
@@ -296,8 +295,9 @@ ConfirmationCodeSent = Bestätigungscode gesendet!
 
 ## Enter/View issue
 ViewIssue = Ticket anzeigen
-EnterNew = Neu erfassen:
+EnterNewIssue = Enter new issue
 EnterNewIssueType = Enter new "{0}"
+EnterNewBriefInstructions = Click the issue type name to enter a new issue from scratch or select a template.
 DefaultText = Standard-Text-Attribute werden verwendet, wenn mehr Informationen als die Ticket-ID benötigt werden, um das Ticket zu identifizieren. Dies wird zum Beispiel in den Emails verwendet, die nach der Ticket-Eingabe versendet werden.
 StaticIssueInfo = Statische Informationen
 ReasonForChange = Grund der Änderung
@@ -341,6 +341,7 @@ PleaseEnterIssueID = Bitte eine Ticket-ID eingeben.
 NoPermissionToViewIssue = Sie haben nicht die Berechtigung eine Ticket mit dieser ID anzusehen. Wenn Sie glauben, dass dies eine gültige ID ist, wenden Sie sich bitte an den Projektleiter oder den Systemadministrator.
 History = Historie
 IssueSearchResults = Ticket Such-Ergebnis
+IssueLimitExceeded = Please select not more than {0} issues.
 ChooseDependencyType = Abhängigkeitstyp wählen
 HideCommentList = Vollständige Kommentarliste verstecken
 ShowCommentList = Vollständige Kommentarliste anzeigen
@@ -419,6 +420,8 @@ YouCannotAccessModules = Sie haben keine Berechtigung, andere Module auszuwählen
 RequestRoles = Rollen beantragen
 
 ##Search
+AdvancedQuery = Advanced query
+CustomQuery = Custom query
 NoCustomSearch = Es sind keine üblichen Suchattribute für diesen Prüfgegenstand angegeben, deshalb wird stattdessen der erweiterte Suchbildschirm angezeigt.
 ClickHereToSelectUsersForQuery = <a href="#add">Hier klicken</a> um Benutzer auszuwählen und mit dieser Abfrage in Verbindung zu bringen.
 TextSearch = Text-Suche
@@ -438,6 +441,8 @@ AssignSelected = Ausgewähltes markieren
 CopyAll = Alles kopieren
 MoveAll = Alles verschieben
 MoveSelected = Ausgewähltes verschieben
+IssueTypeListMoreThanOne = Issue type list did not contain one and only one element.
+NoIssueTypeList = Lost track of the selected issue type(s).
 
 ##UserList
 Users = Benutzer
@@ -473,11 +478,11 @@ DestinationModuleLacksIssueType = Dem Ziel-Modul ist dieser Ticket-Typ nicht zug
 DidNotCopyAttributes = Die folgenden Attribute und Werte stimmen nicht mit dem Typ des Prüfgegenstands überein "{0}":
 DidNotCopyAttributesFromArtifact = Die folgenden Attribute und Werte von Prüfgegenstand "{0}" stimmten nicht mit dem Typ des Prüfgegenstands "{1}" überein:
 SelectIssueToMove = Bitte wählen Sie ein Ticket zum Verschieben.
+IssueCannotBeCopied = {0}(s) cannot be copied / moved since some of the 'required' attributes in the destination {1} / {2} have not been supplied with a value.
+AttributesThatReqdInDestinationIssueType = Attributes that require a value in the destination {0} / {1}
 
 ##IssueList
 ExportResultsTo = Exportiere Ergebnisse nach...
-ForFollowingModulesIssueTypes = {0} für die folgenden Module und/oder Ticket-Typen
-ForRModuleIssueType = {0} für {1}
 NoMatchingIssues = Keine Tickets gefunden.
 AddRemoreAttributesFromView = Hinzufügen/entfernen von Attributen aus Ansicht
 NoCommonAttributesInList = Die für die Abfrage ausgewählten Ticket-Typen haben keine gemeinsamen Attribute
@@ -486,6 +491,8 @@ SortAscending = aufsteigend sortieren
 AllLC = alle
 SelectedLC = ausgewählt
 ProcessResults = Ablaufergebnisse
+QueryScope = Query scope
+ColumnsDropped = Some attribute columns were dropped due to query complexity.
 
 ##ConfigureIssueList
 Attributes = Attribute
@@ -504,6 +511,7 @@ EditTemplate = Vorlage ändern
 
 ## entry/Wizard*
 NoIssuesSelected = Sie haben keine Tickets zur Ansicht ausgewählt.
+NoIssuesSelectedToAddComment = You have not selected any issues to add comments to.
 AddInitialComment = Eingangskommentar hinzufügen
 
 ## Macros
@@ -532,6 +540,7 @@ UserSelectedFrequency = Benutzer-Frequenz
 CrossModuleQueriesScope = Cross module queries always have personal scope.
 NoSavedQueries = Es existieren keine gespeicherten Abfragen. Um eine neue Abfrage zu erstellen, gehen Sie zu
 SavedQueryInfo = Information zu gespeicherten Abfragen
+QueryModified = Query has been modified.
 NoQueryToSave = Keine Abfrage zum Speichern. Bitte
 EnterAQuery = geben Sie eine Abfrage ein.
 SelectedIssueTypes = Für diese Abfrage ausgewählte Ticket-Typen
@@ -552,15 +561,14 @@ Choose = Bitte wählen...
 SortBy = Sortieren nach
 ModuleQuery = Modul-Abfrage
 BuildXModuleQuery = Modulübergreifende Abfrage erstellen
-IssueTypesInModule = Ticket-Typen dieses Moduls
-ToQuery = Um einen Ticket-Typen abzufragen, auf den Ticket-Typ Namen klicken. Zur Abfrage mehrerer Ticket-Typen, eine der Optionen und die gewünschten Ticket-Typen auswählen, anschliessend "Los" klicken
+IssueTypesInModuleAndSavedLists = Issue types in this module and saved lists
 QuerySelected = Ausgewählte Abfrage:
 QuerySelectedDesc = Gemeinsame Abfrage-Felder der ausgewählten Ticket-Typen
 AllIssues = Alle Tickets:
 AllIssuesDesc = liefert eine Liste aller Tickets zu den ausgewählten Ticket-Typen
 MyIssues = Meine Tickets:
 MyIssuesDesc = liefert eine Liste meiner Tickets zu den ausgewählten Ticket-Typen
-AllIssueTypes = Alle Ticket-Typen
+AllIssueTypesInModule = All issue types in {0}
 QueryAllIssueTypes = Alle Ticket-Typen der Liste abfragen
 ThereAreMoreComments = Es gibt weitere {0} Kommentare.
 QueryWarning = Hinweis: Wenn Sie den Gültigkeitsbereich dieser Abfrage global setzen, können Sie nicht mehr bearbeiten. Bitte beenden Sie alle Änderungen in der Abfrage bevor Sie "speichern" drücken.
@@ -570,28 +578,35 @@ Excel = Excel
 TabSeparatedValues = Tab separated values
 
 ##EditXModuleList
+ToQuery = Um einen Ticket-Typen abzufragen, auf den Ticket-Typ Namen klicken. Zur Abfrage mehrerer Ticket-Typen, eine der Optionen und die gewünschten Ticket-Typen auswählen, anschliessend "Los" klicken
 SaveXModuleList = Module-/Ticket-Typ-übergreifende Liste speichern
 SaveNewList = Neue Liste speichern
 ChoosePredefinedList = Bitte eine vordefinierte Liste wählen oder eigene Liste erstellen
 PredefinedLists = Vordefinierte, statische, modulübergreifende Listen
 DefineQuery = Abfrage definieren
-BuildListOfIssueTypes = Liste von Ticket-Typen für diese Abfrage erstellen
-UsePreviouslySavedList = Sie können eine zuvor gespeicherte Liste als Ausgangspunkt für einen neue Liste von Modulen/Ticket-Typen zu erstellen. Die Liste, die Sie gerade erstellen, und alle gespeicherten Listen sind unabhängig und spätere Änderungen wirken sich nicht auf die anderen aus.
+StartListFromSaved = Build new list
+SavedListsOfIssueTypes = Saved lists of issue types
 NoIssueTypeSelected = Es wurden keine Ticket-Typen ausgewählt. Bitte von der untenstehenden Liste auswählen.
 SelectSaveXModuleQuery = Eine modulübergreifende Abfrage auswählen...
 SelectSaveXModuleReport = Select a saved cross module report...
-ModuleIssuesInDomain = Module / Tickets dieser Organisation
+NoSavedIssueTypeLists = There are no saved issue type lists
+PreviouslySelectedIssueTypes = Previously selected issue types
+OtherModuleIssuesInDomain = Other modules / issue types in this domain
 FilterNoResults = Keine Ergebnisse mit diesem Filter; alle Ticket-Typen werden angezeigt.
 NoMoreIssueTypes = Es stehen nicht mehr Ticket-Typen zur Auswahl.
 MaxPerPage = Max. Einträge pro Seite
 NumberOfIssues = Ticket-Anzahl
 EnteringListWillOverwrite = Die Eingabe des Namens einer zuvor gespeicherten Liste wird die alte Liste überschreiben.
 EditingPreviouslySaved = Bearbeiten einer zuvor gespeicherten Liste ist nicht vorgesehen.
+CurrentModuleTypesIntroShown = The current module is separated for convenient access.  Issue types in this section can be combined with those in other modules from the following section. 
+HideThisSection = <a href="{0}">Hide this section</a>
+CurrentModuleTypesIntroHidden = Issue types in the current module. <a href="{0}">Click here</a> to create a cross module list.
 
 ##Error
 StackTrace = Stack-Trace
 NoErrorMessage = Keine Fehlermeldung verfügbar.
 GenericError = Ein Fehler ist aufgetreten.
+LostSessionStateError = The application state was lost.  This normally happens if your session was timed out.
 ResubmitError = Sie haben versucht Daten nochmals einzureichen die bereits eingereicht wurden. Änderungen wurden nicht gespeichert.
 ActionNotAssignedPermission = Aktion ist keine Berechtigung zugeordnet.
 SpecifyRole = Bitte geben Sie eine Rolle an.
@@ -719,6 +734,10 @@ GroupingItemsAppear = Gruppierte Elemente werden als einfache Überschriften ange
 IncompleteReportDefinition = The report does not appear ready.  Please check its definition; it is possible the data to be shown in the report has been made invalid by an administrator.
 ReportDefinitionModified = This report used data that has been removed by an administrator.  The report definition is modified accordingly.
 ErrorOccurredCheckingMessage = There appeared to be a message related to this report, but an error occured when retrieving it.
+ReportIsTooExpensive = This report cannot be generated because there are too many headings defined. The combined total number of row and column headings must be less than or equal to {0}.
+ThisAxisMustBeDatesUnlessHeadingsAreRemoved = This axis must be dates unless a heading is removed from the other axis.
+AvailableNumberHeadings = You may add up to {0} more headings.
+NoMoreHeadings = The maximum number of headings has been reached.
 
 ## Dependencies
 depend_blocking = blockiert
@@ -781,6 +800,7 @@ AttributeGroups = Attribut-Gruppen
 Active = Aktiv
 Sequence = Nummer #
 UserAttributes = Benutzer-Attribute
+AttributeOptions = Attribute options
 SentToSelected = An ausgewählte Antragsteller senden
 NoIssueTypes = Keine Ticket-Typen vorhanden, die diesem Modul hinzugefügt werden könnten.
 IssueTypes = Ticket-Typen
@@ -862,6 +882,8 @@ AttrMappedToIssueTypes = Dieses Attribut ist mit einem oder mehreren Ticket-Type
 NoUserAttributeSelected = No user attribute was selected for removal.
 NoAttributeSelected = No attribute was selected for removal.
 CannotDeleteAttributeFromLockedIssueType = You cannot delete this attribute, because this issue type is locked.
+DeletedOptionsFromRequiredAttribute = You have just removed all the active options from this required attribute.  The attribute has been marked as no longer being required. If you wish to require it, please add some active options.
+CannotRequireAttributeWithNoOptions = You cannot mark as required an attribute that has no active options.
 
 ## XMLExport
 XMLExportSettingsScreen = Diese Seite ermöglicht den Export aller globalen Einstellungen sowie die der aktuell ausgewählten Module in eine XML-Datei. Die Datei kann entweder auf Festplatte gespeichert oder im Browser-Fenster angezeigt werden.
@@ -890,7 +912,7 @@ MissingXML = XML fehlt oder ist zu klein um ausgeführt zu werden
 Unauthorized = Dieses Benutzerkonto ist nicht berechtigt diese Operation durchzuführen.
 OldID = Original ID
 NewID = Scarab ID
-IssueTypeLocked = Issue type {0} is locked
+IssueTypeInactive = Issue type {0} is inactive, so issues cannot be imported for it.
 
 ## Navigation
 IssueTrackingHome = Ticket-Verfolgung [Home]
@@ -906,8 +928,8 @@ Scarab = Scarab
 Debugging = Debugging:
 IssueId = Ticket-Id
 SelectQuery = Abfrage auswählen...
-NewModuleQuery = Neue Modulabfrage
-Custom = Benutzerdefiniert
+NewQuery = New query
+NewQueryWithNewIssueTypes = New query with new issue types
 MostRecent = Letzte Abfragen
 SavedPersonalQueries = Gespeicherte Abfragen (persönlich)...
 SavedProjectQueries = Gespeicherte Abfragen (Modul)...
@@ -937,7 +959,8 @@ CouldNotFindRModuleAttribute = Modulattribut "{0}" konnte nicht gefunden werden
 CouldNotFindAttributeOption = Attributoption "{0}" für Attribut "{1}" konnte nicht gefunden werden
 CouldNotFindModuleAttributeOption = Modulattributoption "{0}" für Attribut "{1}" konnte nicht gefunden werden
 InvalidDate = Invalid date "{0}" for format "{1}"
-XMLModuleNotCurrent = XML Modul ist "{0}", aber aktuelles Modul ist "{1}"
+XMLAndCurrentModuleMismatch = The module "{0}" specified via XML does not match the current module "{1}"
+XMLAndCurrentCodeMismatch = The module code "{0}" specified via XML does not match the current module''s code "{1}"
 
 ## Email Configuration
 EmailConfiguration = Email Konfiguration
@@ -1042,6 +1065,7 @@ IssueTypeNameExists = Ein Ticket-Typ mit diesem Namen existiert bereits
 # this is also used in ArtifactTypeEdit
 DuplicateSequenceNumbersForAttributeGroups = Bitte geben Sie keine doppelten Nummern für Attribut-Gruppen an.
 CannotPositionDuplicateCheckFirst = Die Duplikat-Prüfung kann nicht am Anfang erfolgen.
+DuplicateSequenceNumbersFound = Please do not enter duplicate sequence numbers for {0}.
 
 ## GlobalArtifactTypes 
 ChangesResultDuplicateNames = Änderungen würden zu doppelten Namen führen
@@ -1157,6 +1181,7 @@ UserAttributeRemoved = User attribute(s) {0} removed from the issue type.
 ## ReportIssue
 IssueNoLongerValid = Das Ticket ist nicht länger gültig.
 DupeCheckSkippedForLackOfResources = Duplicate issue check was skipped.
+DupeCheckSkippedBecauseComplexity = There are too many attributes being considered to use duplicate checking.  It should either be disabled or the number of attributes in the dedupe group(s) need to be reduced.
 IssueTypeUnavailable = The issue type you were entering became unavailable.
 
 ## QueryList
@@ -1170,8 +1195,11 @@ UserNotPossibleAssignee = Der gegebene Benutzer kann nicht mit diesem Benutzerat
 UserInList = Dieser Benutzer existiert bereits in der Liste.
 AnyHasReplacedPreviousChoices = Die Wahl von 'Jedes' hat die vorhergehende Auswahl ersetzt.
 ChoiceAlreadyAccountedAny = 'Jedes' beinhaltet alle Attribute und deckt 'Erstellt von' ab
+SearchAbortedDueToComplexity = The combination of filter criteria entered for the query would be too expensive.  {0} for more information.
+ClickHere = Click here
 
 ## TemplateList
+TemplateListBriefInstructions = You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
 NewTemplateCreated = Neue Vorlage wurde erzeugt.
 TemplateModified = Vorlage wurde geändert.
 TemplateDeleted = Vorlage wurde gelöscht.
@@ -1373,7 +1401,7 @@ BestPractices = Optimale Verfahren
 HelpFAQ = FAQ
 HelpGlossary = Glossar
 Top = Nach oben
-
+QueryLimits = Query limits
 
 ##Introduction
 ScarabIs = Scarab ist
@@ -1759,6 +1787,7 @@ UQSP11 = Using saved queries assists the user in keeping up to date on changes t
 UQSP12 = Subscriptions can be helpful if you have a project critical component that you need to keep a careful eye on. For instance, you are responsible for all database access issues. You know that there are some potential problems with database access for users on the Windows 95 operating system. Creating, saving and subscribing to a query with the search parameters that define your area of concern will keep alert you to issues as frequently as you need them.
 DuplicateQueryName = A query by that name already exists. Please choose another name.
 CannotEditQuery = You do not have permissions to edit this query.
+NotifyPendingApproval = The {0} you have suggested is currently pending for approval and hence unavailable for use. You will be notified by email once the module owner takes an action on this item.
 CrossModuleQueriesHavePersonalScope = Cross module queries always have personal scope
 
 ## UserQueryCustom
