--- a/src/i18n/ScarabBundle_fr_FR.properties
+++ b/src/i18n/ScarabBundle_fr_FR.properties
@@ -1,6 +1,6 @@
 default.ScarabWordMark = Scarab
 AdvancedQuery.vm.Title = Recherche avancée
-ViewQuery.vm.Title=Revoir la requête
+ViewQuery.vm.Title = Revoir la requête
 AssignIssue.vm.Title = Associer des utilisateurs à cette fiche
 ChangePassword.vm.Title = Changer votre mot de passe
 ConfigureIssueList.vm.Title = Ajouter/retirer des attributs de la vue
@@ -24,7 +24,7 @@ TemplateList.vm.Title = Liste des gabarits
 UserList.vm.Title = Sélection des utilisateurs
 ViewIssue.vm.Title = Voir une fiche
 ViewIssueLong.vm.Title = Voir des fiches
-IssueTypeList.vm.Title=Construire une liste des types de fiches
+IssueTypeList.vm.Title = Construire une liste des types de fiches
 
 admin/AddPermission.vm.Title = Administration des droits
 admin/AddRole.vm.Title = Administration des rôles
@@ -183,8 +183,8 @@ Refresh = Actualiser
 Done = Terminer
 Save = Enregistrer
 
-PaginatePrevious=&laquo;&nbsp;Précédent
-PaginateNext=Suivant&nbsp;&raquo;
+PaginatePrevious = &laquo;&nbsp;Précédent
+PaginateNext = Suivant&nbsp;&raquo;
 Next = Suivant
 ClearForm = Réinitialiser le formulaire
 CopySelected = Copier la sélection
@@ -223,7 +223,7 @@ UpdateOptions = Mettre à jour les options
 CopyIssue = Copier la fiche
 MoveIssue = Déplacer la fiche
 EditComment = Éditer les commentaires
-ContinueEntry=Continuer la saisie
+ContinueEntry = Continuer la saisie
 SubmitIssue = Soumettre une fiche
 AddSelected = Ajouter la sélection
 RemoveSelected = Enlever la sélection
@@ -235,14 +235,14 @@ NoItemsSelected = Non
 
 ## Templates
 Templates = Gabarits
-EditTemplates=&Eacute;diter les gabarits
+EditTemplates = &Eacute;diter les gabarits
 NoTemplates = Il n'y a pas de gabarits enregistrés, cliquez sur le bouton Créer pour créer un nouveau gabarit.
 TemplateInfo = Infos sur le gabarit
 TemplateAttributes = Attributs du gabarit
 CouldNotLocateTemplateToDelete = Le gabarit à supprimer n'a pu être trouvé
 TemplateWarning = Note: si vous définissez la portée de ce gabarit à global, vous ne pourrez plus le modifier. Veuillez vérifier toutes les modifications apportées à ce gabarit avant de cliquer "Enregistrer".
 DuplicateTemplateName = Un gabarit portant ce nom existe déjà.
-AtLeastOneAttributeForTemplate=Vous devez donner la valeur d'au moins un attribut pour créer un nouveau gabarit.
+AtLeastOneAttributeForTemplate = Vous devez donner la valeur d'au moins un attribut pour créer un nouveau gabarit.
 
 ##Index/Login
 ToAccessFunctions1 = Pour accéder à la plupart des fonctions de Scarab, vous devez d'abord
@@ -321,7 +321,6 @@ NoAttachments = Il n'y a pas de pièces jointes à cette fiche.
 Dependencies = Dépendances
 NoDependencies = Il n'y a pas de dépendances pour cette fiche.
 Path = Chemin
-Type = Type
 Parent = Parent
 Child = Enfant
 PrivateIssue = Fiche privée
@@ -372,7 +371,6 @@ BMPImage = Image BMP (image/bmp)
 GIFImage = Image GIF (image/gif)
 JPEGImage = Image JPEG (image/jpeg)
 PNGImage = Image PNG (image/png)
-PNGImage = Image PNG (image/png)
 MacBinhex = Mac binhex (application/mac-binhex40)
 PDFFormat = PDF portable document format (application/pdf)
 ZipFormat = Données comprimées Zip (application/x-zip-compressed)
@@ -409,7 +407,6 @@ ForgotYourPassword = Mot de passe oublié ? <a href="{0}"><strong>Cliquez ici</st
 Password = Mot de passe
 PasswordSame = Votre nouveau mot de passe est identique à l'ancien. Votre mot de passe n'a pas été modifié.
 PasswordChanged = Votre mot de passe a été modifié. Veuillez vous connecter avec ce nouveau mot de passe.
-PasswordsDoNotMatch = Les mots de passe que vous avez saisis ne correspondent pas.
 
 ##ModuleNotReady
 ProjectIsNotReady = Le projet n'est pas prêt. Veuillez patienter quelques minutes et essayer à nouveau.
@@ -442,7 +439,6 @@ ViewSelected = Voir la sélection
 AssignAll = Assigner tout
 AssignSelected = Assigner la sélection
 CopyAll = Copier tout
-CopySelected = Copier la sélection
 MoveAll = Déplacer tout
 MoveSelected = Déplacer la sélection
 IssueTypeListMoreThanOne = La liste de type de fiches doit contenir un et un seul élément.
@@ -482,6 +478,8 @@ DestinationModuleLacksIssueType = Le module de destination n'a pas ce type de fi
 DidNotCopyAttributes = Les informations d'attribut suivantes n'ont pas été copiées:
 DidNotCopyAttributesFromArtifact = Les attributs et valeurs suivants n'ont pas été copiés de la fiche {0}:
 SelectIssueToMove = Veuillez choisir une fiche à déplacer.
+IssueCannotBeCopied = {0}(s) cannot be copied / moved since some of the 'required' attributes in the destination {1} / {2} have not been supplied with a value.
+AttributesThatReqdInDestinationIssueType = Attributes that require a value in the destination {0} / {1}
 
 ##IssueList
 ExportResultsTo = Exporter les résultats vers...
@@ -493,7 +491,7 @@ SortAscending = tri ascendant
 AllLC = tout
 SelectedLC = sélection
 ProcessResults = Traiter les résultats
-QueryScope= Portée de la requête
+QueryScope = Portée de la requête
 ColumnsDropped = Certaines colonnes d'attributs ont été abandonnées en raison de la complexité de la requête.
 
 ##ConfigureIssueList
@@ -586,8 +584,8 @@ SaveNewList = Enregistrer une nouvelle liste
 ChoosePredefinedList = Choisissez une liste prédéfinie ou construisez une liste personnalisée
 PredefinedLists = Listes statiques prédéfinies sur plusieurs modules
 DefineQuery = Définir une requête
-StartListFromSaved=Construire une nouvelle liste
-SavedListsOfIssueTypes=Saved lists of issue types
+StartListFromSaved = Construire une nouvelle liste
+SavedListsOfIssueTypes = Saved lists of issue types
 NoIssueTypeSelected = Aucun type de fiche n'a été sélectionné. Sélectionnez un type dans la liste ci-dessous.
 SelectSaveXModuleQuery = Choisissez une requête sur plusieurs modules...
 SelectSaveXModuleReport = Listes de types de fiches enregistrées..
@@ -601,7 +599,7 @@ NumberOfIssues = Nombre de fiches
 EnteringListWillOverwrite = Le choix d'un nom de liste enregistré précédemment entraînera le remplacement de cette liste.
 EditingPreviouslySaved = La modification d'une liste enregistrée n'est pas implémentée.
 CurrentModuleTypesIntroShown = Le module courant est séparé pour un accès plus commode. Les types de fiches dans cette section peuvent être combinés avec ceux d'autres modules pour la section suivante.
-HideThisSection=<a href="{0}">Cacher cette section</a>
+HideThisSection = <a href="{0}">Cacher cette section</a>
 CurrentModuleTypesIntroHidden = Issue types in the current module. <a href="{0}">Cliquez ici</a> pour créer une liste multi-modules.
 
 ##Error
@@ -613,15 +611,6 @@ ResubmitError = Vous avez tenté de soumettre à nouveau des données qui ont déjà 
 ActionNotAssignedPermission = Aucune permission n'est associée à cette action.
 SpecifyRole = Veuillez spécifier un rôle.
 StackTraceError = <pre>Si le vidage de la pile ci-dessous comporte en haut la mention 
-"ResourceNotFoundException", cela signifie qu'un gabarit n'a pu être 
-trouvé (404), ce qui est probablement le résultat d'un lien brisé.
-
-. Si le message ci-dessous mentionne autre chose, veuillez soumettre une copie de la pile 
-<strong>et une explication de ce que vous avez fait pour déclencher l'erreur</strong> au 
-<a href="http://scarab.tigris.org/issues.html">Système de suivi d'anomalies Scarab</a> pour analyse. 
-Si vous êtes développeut et que vous pensez connaître une solution à ce problème, 
-sentez-vous libre de joindre un patch pour le résoudre. </pre>
-NoErrorMessage = Désolé, il n'y avait pas de message d'erreur.
 
 ## Reports
 Update = Mise à jour
@@ -720,8 +709,6 @@ LeaveBlank = Laisser en blanc pour date et heure courantes
 RowsType = Lignes: types de contenu
 ColumnType = Colonnes: types de contenu
 SelectRowContent = Choisir le contenu des lignes/colonnes
-RowContent = Contenu de ligne
-ColumnContent = Contenu de colonne
 GenerateReport = Générer l'état
 NoCategoryChosen = Aucune catégorie n'a été choisir. Vérifiez l'URL et réessayez.
 ReportContentRate = Contenu de l'état: Analyse de taux de changement
@@ -742,7 +729,6 @@ ReportUpdatedNotSavedDoMore = L'état a été mis à jour. Les modifications ne sont
 ReportUpdatedNotSavedDoMoreOrCalculate = L'état a été mis à jour. Les modifications ne sont sauvegardées que lorsque vous cliquez le bouton "Enregistrer cet état" dans la sortie de l'état.  Vous pouvez maintenant consulter les résultats.  Vous pouvez continuer à modifier cet en-tête, en combinant les options en groupe, en ajoutant ou modifiant d'autres niveaux d'en-tête ou en modifiant l'autre axe.
 HeadingAddedNowAddContent = Un nouvel en-tête a été ajouté; vous pouvez descendre dans la page et ajouter du contenu à cet en-tête. Notez que vous ne pourrez pas calculer les résultats de l'état avant d'avoir défini un contenu pour ce nouvel en-tête.
 GroupingItemsAppearAsSingleHeading = <em><strong>Note:</strong> Un regroupement apparaît comme un seul en-tête portant le nom du groupe sélectionné.</em>
-ColumnHeadings = Contenu axe Y: En-têtes de colonne
 EachHeadingAppers = <strong>Note:</strong> Chaque en-tête de cette liste apparaît comme en-tête de ligne ou de colonne dans la sortie de cet état. Chaque item d'un en-tête apparaît comme nouvelle ligne ou colonne (selon que l'axe Y a été défini comme ligne ou colonne).
 GroupingItemsAppear = Un regroupement apparaît comme un seul en-tête portant le nom du groupe sélectionné.
 IncompleteReportDefinition = L'état ne semble pas prêt. Veuillez vérifier sa définition; il est possible que les données qui devaient apparaître dans l'état aient été invalidées par un administrateur.
@@ -801,7 +787,6 @@ Query = Interroger
 RoleX = Rôle X
 EnterIssueTemplate = Entrer un gabarit de fiche
 IssueTypeNotFound = Type de fiche pas trouvé. Pour continuer, veuillez cliquer 
-Here = ici
 IssueTypeRemovedFromModule = Le type de fiche que vous avez tenté d'éditer a déjà été enlevé du module.
 IssueTypeRemovedFromModuleAndProceed = Le type de fiche que vous avez tenté d'éditer a déjà été enlevé du module. Pour continuer, cliquez
 IssueTypeInfo = Infos sur le type de fiche
@@ -991,7 +976,6 @@ Welcome = Bienvenue {0} {1},
 YourConfirmation = Votre code de confirmation est: {0}
 ToConfirmYourAccount = Pour confirmer la création de votre compte utilisateur, rendez-vous à l'URL suivante pour y entrer votre code.
 Thanks = Merci,
-Comment = Commentaire:
 GeneralComment = Commentaire général:
 YouCanViewIssue = Vous pouvez consulter le détail de cette fiche à l'adresse:
 PasswordReset = votre mot de passe a été réinitialisé à:
@@ -1094,7 +1078,7 @@ CannotDeleteIssueTypesWithIssues = Vous ne pouvez pas détruire un type de fiche 
 IssueTypeHasIssues = Ce type de fiche a des fiches associées.
 GlobalArtifactTypeCopied = Type global d'artéfact copié.
 SystemSpecifiedIssueType = Ce type de fiche est défini par le système et ne peut pas être édité.
-CannotDeleteSystemSpecifiedIssueType=Issue type is system defined and hence cannot be deleted.
+CannotDeleteSystemSpecifiedIssueType = Issue type is system defined and hence cannot be deleted.
 ## GlobalAttributeEdit
 CannotCreateDuplicateAttribute = Il n'est pas possible de créer un Attribut en double avec le même nom!
 RecursiveParentChildRelationship = Désolé, une relation récursive Parent/Enfant n'est pas permise!
@@ -1110,7 +1094,7 @@ NavIssueTypeLimit = Vous ne pouvez pas choisir plus de cinq types de fiches pour
 SelectIssueType = Veuillez choisir un type de fiche.
 IssueTypeAlreadyAssociated = Ce type de fiche est déjà associé au module.
 SystemSpecified = Défini par le système
-
+4
 CannotZeroIssueType = Vous ne pouvez pas avoir moins d'un type de fiche.
 SelectedIssueTypesRemovedFromModule = Les types de fiches sélectionnés ont été enlevés du module.
 SelectIssueTypeToDeleteFromModule = Veuillez choisir un type de fiche à enlever du module.
@@ -1140,7 +1124,6 @@ UseBrowserPrintReport = Utilisez votre navigateur pour imprimer l'état.
 ## ModuleQuery
 MustSelectAtLeastOneIssueType = Vous devez choisir au moins un type de fiche
 InvalidIssueTypeId = Un ID de type de fiche non valide a été spécifié
-NoMatchingIssues = Pas de fiche correspondant à cela.
 MustSelectQueryType = Vous devez choisir un type de requête.
 
 AllModulesAndIssueTypes = Tous les modules et types de fiches
@@ -1216,7 +1199,7 @@ SearchAbortedDueToComplexity = La combinaison de critères de filtre saisie pour 
 ClickHere = Cliquez ici
 
 ## TemplateList
-TemplateListBriefInstructions=You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
+TemplateListBriefInstructions = You may show templates for other issue types using the dropdown issue type list.  Click the link in the 'Name' column to edit the template and the link in the 'Availability' column to use the template.
 NewTemplateCreated = Un nouveau gabarit a été créé.
 TemplateModified = Le gabarit a été modifié.
 TemplateDeleted = Le gabarit a été supprimé.
@@ -1262,7 +1245,6 @@ CannotMoveToSameModule = Vous ne pouvez pas déplacer une fiche vers le même modu
 SelectModuleAndIssueType = Veuillez choisir un module et un type d'artefact.
 OnlySelectOneDestination = Veuillez ne choisir qu'une destination.
 ReasonRequired = Il faut fournir une raison pour déplacer ou copier une fiche.
-IssueMoved = Cette fiche a été déplacée dans un autre module.
 NoActionSpecified = Pas d'action (Copier ou Déplacer) spécifiée.
 
 # Approval
