--- a/src/i18n/ScarabBundle_nl_NL.properties
+++ b/src/i18n/ScarabBundle_nl_NL.properties
@@ -129,7 +129,7 @@ Summary = Samenvatting
 SaveChanges = Opgeslagen wijzigingen
 Action = Actie
 By = Door
-From = Van
+From = From
 Here = hier.
 Type = Soort
 To = Aan
@@ -323,7 +323,7 @@ NoDependencies = Er zijn geen afhankelijkheden voor deze kaart.
 Path = Pad
 Parent = bovenliggend
 Child = onderliggend
-PrivateIssue = Privé kaart
+PrivateIssue = Prive kaart
 Relationship = Relatie
 ChangeHistory = Wijzig historie
 DateStamp = Datum
@@ -346,8 +346,8 @@ ChooseDependencyType = Kies soort afhankelijkheid
 HideCommentList = Verberg commentaar
 ShowCommentList = Toon commentaar
 LastModified = laatste wijzigings datum/tijd 
-NoAttributesDefinedForIssueType = Er zijn geen attributen gedefinieerd voor deze kaartsoort. Het is niet mogelijk om een nieuwe kaart aan te maken als er geen attributen gedefinieërd zijn.
-NoAttributesDefinedForTemplate = Er zijn geen attributen gedefinieerd voor deze kaartsoort. Het is niet mogelijk om voorkeuzes aan te maken als er geen attributen gedefinieërd zijn.
+NoAttributesDefinedForIssueType = Er zijn geen attributen gedefinieerd voor deze kaartsoort. Het is niet mogelijk om een nieuwe kaart aan te maken als er geen attributen gedefinieerd zijn.
+NoAttributesDefinedForTemplate = Er zijn geen attributen gedefinieerd voor deze kaartsoort. Het is niet mogelijk om voorkeuzes aan te maken als er geen attributen gedefinieerd zijn.
 ApplyTemplate = Pas een {0} voorkeuzes toe
 ViewAllTemplates = Bekijk al mijn {0} voorkeuzes
 NewIssue = Nieuw: {0}
@@ -357,7 +357,7 @@ AttachmentFieldRequired = bijlage velden zijn alleen verplicht als het {0} gezet
 Other = Overig (geef mime soort:
 CloseParenth = )
 SubmitNewIssue = Vastleggen nieuwe kaart
-CommentFieldDesc = Gebruik dit veld om vaste informatie in te voeren. Uw commentaar wordt opgenomen in de e-mail voor de nieuwe kaart én kan bekeken worden in de commentaar wanneer een kaart bekeken wordt.
+CommentFieldDesc = Gebruik dit veld om vaste informatie in te voeren. Uw commentaar wordt opgenomen in de e-mail voor de nieuwe kaart en kan als commentaar bij een kaart geraadpleegd worden.
 MissedRequired1 = Verplicht
 MissedRequired2 = Geef bij de nieuwe kaart een zinvolle korte beschrijving voor de email gericht aan de gebruikers. Ook informatie welke niet in een van de getoonde bovenstaande attributen opgenomen kan worden, kan hier toegevoegd worden.
 IssueTypesInProject = Kaartsoorten in deze module
@@ -478,6 +478,8 @@ DestinationModuleLacksIssueType = De bestemmings module bevat niet deze kaartsoo
 DidNotCopyAttributes = De volgende attributen en waardes komen niet voor in soort "{0}":
 DidNotCopyAttributesFromArtifact = De volgende attributen en waardes van soort "{0}" komen niet voor in soort "{1}":
 SelectIssueToMove = Selecteer een te verplaatsen kaart.
+IssueCannotBeCopied = {0}(s) kan niet gecopieerd / verplaatst worden omdat een aantal verplichte attributen in de bestemming {1} / {2} geen waarde toegekend krijgen.
+AttributesThatReqdInDestinationIssueType = Attributen welke verplichte zijn in de bestemming {0} / {1}
 
 ##IssueList
 ExportResultsTo = Exporteer resultaten naar...
@@ -596,7 +598,9 @@ MaxPerPage = Max items per pagina
 NumberOfIssues = Aantal kaarten
 EnteringListWillOverwrite = Invoeren van een al bestaande naam zal de opgeslagen lijst overschrijven.
 EditingPreviouslySaved = Wijzigen van een opgeslagen lijst is niet geimplementeerd.
-CurrentModuleTypesIntro = De huidige module is afgescheiden t.b.v. gebruiksgemak.  Kaartsoorten in deze sectie kunnen gecombineerd worden met kaartsoorten in de volgende sectie.
+CurrentModuleTypesIntroShown = De huidige module is afgescheiden t.b.v. gebruiksgemak.  Kaartsoorten in deze sectie kunnen gecombineerd worden met kaartsoorten van andere modules in de volgende sectie.  
+HideThisSection = <a href="{0}">Verberg deze sectie</a>
+CurrentModuleTypesIntroHidden = Kaartsoorten in de huidige module. <a href="{0}">Klik hier</a> om een cross module lijst te maken.
 
 ##Error
 StackTrace = Stack Trace
