*** empty log message ***

--- a/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
+++ b/compiler/org/eclipse/jdt/internal/compiler/problem/messages.properties
@@ -143,7 +143,7 @@
 177 = Cannot throw null
 178 = The assignment to variable {0} has no effect
 179 = Possible accidental assignment in place of a comparison. A condition expression should not be reduced to an assignment
-180 = Superfluous semicolon
+180 = Unnecessary semicolon
 181 = Unnecessary cast to type {1} for expression of type {0}
 182 = Unnecessary cast to type {1} for expression of type {0}. It is already compatible with the argument type {2}
 183 = The expression of type {0} is already an instance of type {1}
