[intern] Removed use of deprecated constructors

--- a/res/org/columba/core/i18n/global/global.properties
+++ b/res/org/columba/core/i18n/global/global.properties
@@ -19,6 +19,10 @@ menu_file_close = Close
 menu_file_close_mnemonic=c
 menu_file_new = New
 
+menu_file_new_addressbook = Addressbook Window
+menu_file_new_mail = Mail Window
+menu_file_new_message = Message Window
+
 menu_edit_cut = Cut
 menu_edit_copy = Copy
 menu_edit_paste = Paste
