--- a/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
+++ b/Eclipse UI/org/eclipse/ui/internal/progress/messages.properties
@@ -5,6 +5,7 @@ JobInfo.NoTaskNameDoneMessage = {0}: {1}% done
 JobInfo.Waiting = WAITING: {0}
 JobInfo.Sleeping = SLEEPING: {0}
 JobInfo.System = {0} (SYSTEM)
+JobInfo.Cancelled = {0} (Cancelled)
 JobInfo.Error = ERROR: {0} : {1}
 JobInfo.Blocked = BLOCKED: {0} : {1}
 Error = Error 
